--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+header {
+  background-color: rgb(236, 231, 231);
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  width: 900px;
+  margin: 0 auto;
+  /* background-color: gold; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section {
+  padding: 10px 10px 10px 0;
+  /* border: 2px red solid; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 2px grey solid;
+  width: 100%;
+  height: 150px;
+}
+
+.left {
+  display: flex;
+  width: 20%;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 5%;
+  /* border: 2px blue solid; */
+}
+
+.right {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  width: 80%;
+  /* border: 2px green solid; */
+}
+
+.inedit {
+  margin-left: 20%;
+  /* border: 2px blue solid; */
+}
+
+.direct {
+  margin-left: 20%;
+  /* border: 2px orange solid; */
+}
+
+.red {
+  color: red;
+}
+
+footer {
+  background-color: rgb(236, 231, 231);
+  height: 100px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  margin-top: 40px;
+  width: 100%;
 }
