--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,11 @@ h1 {
   /* border: 2px blue solid; */
 }
 
+.left img {
+  border-radius: 8px;
+  box-shadow: 2px 2px 2px black;
+}
+
 .right {
   display: flex;
   flex-direction: column;
