--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,35 @@
 header {
-  background-color: rgb(236, 231, 231);
-  height: 120px;
+  /* background-color: rgb(236, 231, 231); */
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
   width: 100%;
+  height: 120px;
+  /* background-color: green; */
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: bold;
+  margin-left: 12px;
+  opacity: 0.5;
+  text-shadow: 2px 2px 2px black;
+}
+
+h2 {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 20px;
+  margin-bottom: 8px;
 }
 
 .container {
+  width: 100%;
   width: 900px;
   margin: 0 auto;
   /* background-color: gold; */
@@ -24,7 +41,7 @@ h1 {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  border-bottom: 2px grey solid;
+  border-bottom: 1.5px grey ridge;
   width: 100%;
   height: 150px;
 }
@@ -41,6 +58,8 @@ h1 {
 .left img {
   border-radius: 8px;
   box-shadow: 2px 2px 2px black;
+  object-fit: contain;
+  object-fit: cover;
 }
 
 .right {
@@ -48,11 +67,13 @@ h1 {
   flex-direction: column;
   align-items: flex-start;
   width: 80%;
+
   /* border: 2px green solid; */
 }
 
 .inedit {
   margin-left: 20%;
+
   /* border: 2px blue solid; */
 }
 
@@ -62,6 +83,8 @@ h1 {
 }
 
 .red {
+  font-size: 1.2rem;
+  font-weight: bold;
   color: red;
 }
 
@@ -73,4 +96,8 @@ footer {
   align-items: center;
   margin-top: 40px;
   width: 100%;
+}
+
+.time {
+  font-size: 1.3rem;
 }
