--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ header {
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
-  width: 100%;
+  width: 100vw;
   height: 120px;
   /* background-color: green; */
 }
@@ -30,7 +30,7 @@ h3 {
 
 .container {
   width: 100%;
-  width: 900px;
+  max-width: 900px;
   margin: 0 auto;
   /* background-color: gold; */
 }
@@ -60,6 +60,7 @@ h3 {
   box-shadow: 2px 2px 2px black;
   object-fit: contain;
   object-fit: cover;
+  /* margin: 0 20px; */
 }
 
 .right {
